src/objects/Password_Reset_Email_Log__c.object
<CustomObject>
    <description>This object is used for logging the Password Reset emails from Helix Marketplace.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the contact to whom the email was sent</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Password Reset Email Logs</relationshipLabel>
        <relationshipName>Password_Reset_Email_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>39</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Password Reset Email Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>Password Reset Email Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Password Reset Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>